fix timeline canvas width on mobile

--- a/inat-taxonomy-timeline/style/inat-taxonomy-timeline.css
+++ b/inat-taxonomy-timeline/style/inat-taxonomy-timeline.css
@@ -78,4 +78,9 @@
 
 #inat-taxonomy-timeline-canvas {
     background-color: white;
+    width: 100%;
+}
+
+.inat-taxonomy-timeline-by-area {
+    direction: ltr;
 }
